# PulseTradeAI

./: .env.example  .gitignore  .ignore  AGENTS.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: alert_decision.py  news_analysis.py
backend/app/agents/workflow/: __init__.py  agents.py  llm_client.py  orchestrator.py  state.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/domain/: schemas.py
backend/app/providers/: market.py  news.py
backend/app/services/: cache.py  persistence.py  websocket_manager.py
backend/app/workers/: streams.py
backend/scripts/: audit_insights.py  check_finbert.py  fetch_agent_status.py  print_snapshot_insights.py  trigger_and_poll.py
backend/tests/: test_alert_decision.py
docs/: AI_PIPELINE.md  ARCHITECTURE.md  MULTI_AGENT_WORKFLOW.md  PROJECT_MEMORY.md  PROVIDERS.md
docs/reference/: finnhub_documentation.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/hooks/: useMarketStream.ts
frontend/src/utils/: portfolioImport.ts
