[project]
name = "pulsetradeai-backend"
version = "0.1.0"
description = "FastAPI backend for PulseTradeAI real-time AI market intelligence."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.8",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "openai>=1.40.0",
  "sqlalchemy>=2.0.32",
  "asyncpg>=0.29.0",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
ai = [
  "transformers>=4.44.0",
  "torch>=2.4.0",
  "tiktoken>=0.7.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
